[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="ChatRoom" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="SetUp" type="Control" parent="."]
margin_right = 1055.0
margin_bottom = 616.0

[node name="LeaveBtn" type="Button" parent="SetUp"]
margin_left = 20.0
margin_top = 448.0
margin_right = 78.0
margin_bottom = 476.0
text = "Leave"

[node name="JoinBtn" type="Button" parent="SetUp"]
margin_left = 29.0
margin_top = 395.0
margin_right = 70.0
margin_bottom = 422.0
text = "Join"

[node name="HostBtn" type="Button" parent="SetUp"]
margin_left = 28.0
margin_top = 357.0
margin_right = 70.0
margin_bottom = 377.0
text = "Host"

[node name="NameBtn" type="Button" parent="SetUp"]
margin_left = 21.0
margin_top = 533.0
margin_right = 78.0
margin_bottom = 562.0
text = "Name"

[node name="Ip" type="LineEdit" parent="SetUp"]
margin_left = 81.0
margin_top = 368.0
margin_right = 227.0
margin_bottom = 405.0
placeholder_text = "0.0.0.0"

[node name="name" type="LineEdit" parent="SetUp"]
margin_left = 89.0
margin_top = 528.0
margin_right = 224.0
margin_bottom = 562.0
placeholder_text = "username"

[node name="RoomUI" type="Panel" parent="."]
margin_left = 237.0
margin_right = 1031.0
margin_bottom = 602.0

[node name="ChatInput" type="LineEdit" parent="RoomUI"]
margin_left = 18.0
margin_top = 510.0
margin_right = 774.0
margin_bottom = 584.0
placeholder_text = "Say something"

[node name="ChatDisplay" type="TextEdit" parent="RoomUI"]
margin_left = 18.0
margin_top = 11.0
margin_right = 776.0
margin_bottom = 502.0
readonly = true

[connection signal="pressed" from="SetUp/LeaveBtn" to="." method="_on_LeaveBtn_pressed"]
[connection signal="pressed" from="SetUp/JoinBtn" to="." method="_on_JoinBtn_pressed"]
[connection signal="pressed" from="SetUp/HostBtn" to="." method="_on_HostBtn_pressed"]
[connection signal="pressed" from="SetUp/NameBtn" to="." method="_on_NameBtn_pressed"]
[connection signal="text_entered" from="RoomUI/ChatInput" to="." method="_on_ChatInput_text_entered"]
